[tool.poetry]
name = "es-gamedev-bot"
version = "0.1.0"
description = "a twitter bot"
authors = ["Juan Morais <timrodz@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
autopep8 = "1.4.4"
black = "22.6.0"
certifi = "2019.9.11"
chardet = "3.0.4"
charset-normalizer = "2.1.0"
click = "8.1.3"
idna = "2.8"
mypy-extensions = "0.4.3"
oauthlib = "3.2.0"
pathspec = "0.9.0"
platformdirs = "2.5.2"
pycodestyle = "2.5.0"
PySocks = "1.7.1"
python-dotenv = "0.20.0"
requests = "2.28.1"
requests-oauthlib = "1.2.0"
six = "1.13.0"
tomli = "2.0.1"
tweepy = "4.10.0"
typing-extensions = "4.3.0"
Unidecode = "1.1.1"
urllib3 = "1.26.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
